--- a/public/style.css
+++ b/public/style.css
@@ -122,7 +122,7 @@ nav a {
 }
 
 .leftProfile {
-  width: 20%;
+  width: 25%;
   text-align: center;
   border: 1px;
   border-radius: 1px;
@@ -130,6 +130,11 @@ nav a {
   border-color: rgb(228, 228, 228);
   padding: 15px;
   margin: 15px;
+  box-shadow: rgb(228, 228, 228);
+}
+
+.leftProfile img {
+  margin-bottom: 5px;
 }
 
 .rightProfile {
@@ -138,4 +143,35 @@ nav a {
   border-color: rgb(228, 228, 228);
   padding: 15px;
   margin: 15px;
+}
+
+#overallRating {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1em;
+}
+
+#overallRating span {
+  padding: 2px;
+}
+
+.interests {
+  padding-bottom: 5px;
+  font-weight: bold;
+}
+
+div ul {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+li {
+  padding: 5px;
+}
+
+.matching {
+  color: #25665c;
+  font-weight: bold;
 }
