--- a/public/style.css
+++ b/public/style.css
@@ -321,3 +321,36 @@ li {
   justify-content: center;
   flex-wrap: wrap;
 }
+
+/* message form */
+
+#new-message-form {
+  position: relative;
+}
+
+#new-message-form .form-control {
+  border-width: 3px 1.5px 3px 3px;
+}
+
+#new-message-form.btn {
+  border-width: 3px;
+}
+
+.media-list {
+  overflow-y: scroll;
+  flex: 1 1 auto;
+}
+
+.media img {
+  height: 64px;
+  width: 64px;
+}
+
+.media-object {
+  border-radius: 5px;
+}
+
+.offer_confirmed {
+  border-radius: 5px;
+  background-color: green;
+}
