--- a/public/style.css
+++ b/public/style.css
@@ -586,6 +586,7 @@ li {
 .boldText {
   font-size: 1.5em;
   font-weight: bold;
+}
 
 .sendButton {
   background-color: #fff;
@@ -596,4 +597,46 @@ li {
 #outerchatcontainer {
   display: flex;
   justify-content: center;
+}
+
+.homeImgContainer {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.homeImg {
+  height: 35%;
+  width: 100%;
+}
+
+.topHomeImg {
+  color: white;
+  font-size: 70px;
+  position: absolute;
+  top: 15%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+}
+
+.middleHomeImg {
+  color: white;
+  font-size: 30px;
+  width: 63%;
+  position: absolute;
+  word-wrap: break-word;
+  top: 35%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+}
+
+.lowerHomeImg {
+  color: white;
+  font-size: 30px;
+  width: 63%;
+  position: absolute;
+  word-wrap: break-word;
+  top: 55%;
+  left: 35%;
+  transform: translate(-50%, -50%);
 }
