--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Roboto,Noto,Segoe UI,Arial,sans-serif';
+  font-family: sans-serif;
   font-size: 0.95em;
   margin: 0;
   padding: 0;
@@ -140,7 +140,8 @@ nav a {
 
 .leftProfile {
   height: 100%;
-  text-align: center;
+  width: 25%;
+  text-align: -webkit-center;
   border: 1px;
   border-radius: 1px;
   border-style: solid;
@@ -226,6 +227,18 @@ nav a {
   border-style: solid;
   border-color: rgb(228, 228, 228);
   box-shadow: rgb(228, 228, 228);
+}
+
+.singleinterest {
+  border-bottom-left-radius: 5% 50%;
+  border-bottom-right-radius: 5% 50%;
+  border-top-left-radius: 5% 50%;
+  border-top-right-radius: 5% 50%;
+  border-style: solid;
+  margin: 2px;
+  padding: 5px;
+  background: whitesmoke;
+  display: inline-block;
 }
 
 .servicephotobox {
@@ -320,6 +333,13 @@ nav a {
   font-weight: bold;
 }
 
+.interestswrapper {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+}
+
 div ul {
   list-style-type: none;
   margin: 0px;
@@ -333,6 +353,10 @@ li {
 .matching {
   color: #25665c;
   font-weight: bold;
+}
+
+.displayinterestscontainer {
+  max-width: 100%;
 }
 
 #selectedServiceContainer {
@@ -718,12 +742,16 @@ li {
 }
 
 .editDescription {
-  width: 30%;
+  width: 100%;
+}
+
+.editFields {
+  width: 50%;
 }
 
 .leftEditProfile {
   height: 100%;
-  width: 35%;
+  width: 25%;
   text-align: center;
   border: 1px;
   border-radius: 1px;
@@ -742,7 +770,7 @@ li {
   height: 100%;
   padding: 15px;
   margin: 45px;
-  width: 40%;
+  width: 50%;
   border: 1px;
   border-radius: 1px;
   border-style: solid;
@@ -758,7 +786,11 @@ li {
   height: 100%;
   padding: 15px;
   margin: 10px;
-  width: 40%;
+  width: 100%;
+}
+
+.leftEditProfileInfo {
+  text-align: left;
 }
 
 .boldText {
