--- a/public/style.css
+++ b/public/style.css
@@ -751,46 +751,125 @@ li {
 .newUserServiceContainer {
   display: flex;
   justify-content: center;
+  background-color: darkslategrey;
 }
 
 .innerNewUserService {
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: space-between;
-  width: 75%;
-  height: 300px;
-  margin: 15px;
-  border: 1px;
-  border-radius: 10px;
+  width: 60%;
+  height: 100%;
+  margin: 30px;
+  background-color: #fff;
+  border: 2px;
+  border-radius: 8px;
   border-style: solid;
-  border-color: rgb(228, 228, 228);
-  box-shadow: rgb(228, 228, 228);
+  border-color: darkgreen;
+  box-shadow: 0px 1px 5px rgb(228, 228, 228);
 }
 
 .newUserServiceForm {
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: space-between;
-
-  width: 80%;
-}
-
-.serviceNameDescription {
-  width: 80%;
+  align-content: space-between;
+  height: 80%;
+  margin: 30px;
 }
 
 .newUserServiceHeader {
   font-size: 40px;
-  padding: 5px;
+  padding: 30px;
 }
+
+.add-service-name-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.add-service-input-title {
+  font-weight: bold;
+  margin: 10px;
+}
+
+.add-service-name-input {
+  text-align: center;
+  height: 30px;
+  max-width: 200px;
+  padding: 8px;
+  border: 1px;
+  border-radius: 10px;
+  border-style: solid;
+  border-color: rgb(228, 228, 228);
+  box-shadow: rgb(228, 228, 228);
+  font-size: 1em;
+}
+
+.add-service-description-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 100%;
+}
+
+.add-service-description-textarea {
+  resize: none;
+  text-align: left;
+  align-self: auto;
+  width: 300px;
+  height: 60px;
+  padding: 8px;
+  border: 1px;
+  border-radius: 10px;
+  border-style: solid;
+  border-color: rgb(228, 228, 228);
+  box-shadow: rgb(228, 228, 228);
+  font-size: 0.9em;
+}
+
 .newUserServiceText {
   display: flex;
   align-items: center;
+  text-align: center;
   flex-wrap: wrap;
-  font-size: 20px;
-  width: 75%;
+  font-size: 18px;
+  max-width: 60%;
+}
+
+.add-service-proficiency-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  margin: 10px;
+}
+
+.add-service-proficiency-box {
+  display: flex;
+  flex-direction: column;
+}
+
+.add-service-button {
+  color: white;
+  background-color: rgb(37, 102, 92);
+  width: 90%;
+  box-shadow: 0px 2px 2px 0px whitesmoke;
+  padding: 6px 16px;
+  font-size: 0.875rem;
+  min-width: 64px;
+  box-sizing: border-box;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+  font-weight: 500;
+  line-height: 1.75;
+  border-radius: 4px;
+  letter-spacing: 0.02857em;
+  text-transform: uppercase;
+}
+
+.add-service-button:hover {
+  box-shadow: 0px 0px 1px 1px grey;
 }
 
 .editDescription {
